# MinGuardianServer

./: .gitignore  README.md
res/: engine.yaml
res/resource/: world.csv
src/apps/allinone/: CMakeLists.txt  main.cpp
src/apps/appmgr/: CMakeLists.txt  app_sync_component.cpp  app_sync_component.h  appmgr.h  console_cmd_create.cpp  console_cmd_create.h  create_world_component.cpp  create_world_component.h
src/apps/dbmgr/: main.cpp  mysql_connector.h  mysql_msg.cpp
src/apps/game/: CMakeLists.txt  game.h  lobby.cpp  lobby.h  main.cpp  player_component_onlinegame.cpp  space_channel_component.cpp  space_channel_component.h  space_collection.cpp  space_collection.h  space_sync_handler.cpp  space_sync_handler.h  teleport_object.cpp  teleport_object.h  world_component_teleport.cpp  world_component_teleport.h  world_proxy.cpp  world_proxy.h  world_proxy_component_gather.cpp  world_proxy_component_gather.h  world_proxy_gather.cpp  world_proxy_gather.h  world_proxy_help.cpp  world_proxy_help.h  world_proxy_locator.cpp  world_proxy_locator.h
src/apps/login/: CMakeLists.txt  account.cpp  account.h  main.cpp
src/apps/space/: CMakeLists.txt  console_cmd_world.cpp  console_cmd_world.h  main.cpp  move_component.cpp  move_component.h  move_system.cpp  move_system.h  player_component_detail.cpp  player_component_detail.h  player_manager_component.cpp  space.h  (+7 more)
src/libs/libresource/: CMakeLists.txt  resource_base.cpp  resource_base.h  resource_help.cpp  resource_help.h  resource_manager.cpp  resource_manager.h  resource_mgr_template.h  resource_world.cpp  resource_world.h
(+89 files in other folders)
